# spindle

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  deny.toml  spindle.service  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
codegen/: generate.sh
scripts/: test_chat_handshake.ts
src/: config.rs  lib.rs  main.rs  protocol.rs  rpc.rs  rpc_router.rs  state.rs  state_store.rs  tmux.rs
src/assets/: claude-agent-acp-threadmill.mjs
src/services/: agent.rs  agent_registry.rs  chat.rs  checkpoint.rs  external_sessions.rs  file.rs  git.rs  issues.rs  mod.rs  opencode.rs  preset.rs  project.rs  system.rs  terminal.rs  thread.rs  thread_config.rs  title.rs  todo.rs  workflow.rs
src/services/chat/: context.rs  history.rs  io.rs  runtime.rs  session.rs  status.rs
src/services/workflow/: reviewer_selection.rs  service.rs  store.rs
tests/: agent.rs  binary.rs  chat.rs  checkpoint.rs  file.rs  git.rs  opencode.rs  ping.rs  preset.rs  project.rs  sync.rs  system.rs  terminal.rs  terminal_spawn.rs  thread.rs  threadmill_cli.rs  todo.rs  todo_cli.rs  workflow.rs
tests/common/: mod.rs
