[package]
name = "spindle"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.39", features = ["bundled"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1.89"

[[bin]]
name = "threadmill-cli"
path = "src/bin/threadmill-cli.rs"

[profile.release]
debug = "line-tables-only"
